# OpenIT_fork

./: .clang-format  .clang-tidy  .cmake-format.json  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/: auto-assign.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation-issue.yml  feature_request.yml  translation_issue.yml
.github/workflows/: auto-assign.yml  build_linux.yml  build_windows.yml  clang-format.yml  copy-labels.yml
cmake/: compilation_flags.cmake  vcpkg.cmake
docs/: CODE_OF_CONDUCT_RU.md  SECURITY.md
projects/: CMakeLists.txt
projects/client/: CMakeLists.txt  README.md
projects/client/src/: main.cpp
projects/core/: CMakeLists.txt  README.md
projects/core/include/core/: ai.h  common.h  game.h  player.h
projects/core/src/core/: ai.cpp  game.cpp  player.cpp
projects/core/tests/: CMakeLists.txt  main.cpp  test.cpp
projects/server/: CMakeLists.txt  README.md
projects/server/src/: main.cpp
shared/include/: Entrypoint.h
